--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
     <meta property="article:author" content="https://www.facebook.com/hoangsvit"/>
     <meta property="article:publisher" content="https://www.facebook.com/hoangsvit"/>
     <meta property="fb:app_id" content="363745774395676" />
-    <meta property="og:image" content="img/brand/logo-svg" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="400" />
+    <meta property="og:image" content="https://cdn.eplus.dev/img/brand/logo-share.png" />
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="200" />
     <!--Stylesheet-->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
