--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         </a>
     </p>
     <p>
-        Founder by <a target="_blank" class="text-primary" href="https://fb.me/hoangsvit">Nguyen Ngoc Minh Hoang</a>
+        Founder by <a target="_blank" class="text-primary" href="https://fb.me/hoangsvit">David Nguyen</a>
     </p>
     <p>
-        Made in <i class="fas fa-heart text-danger"></i> Ho Chi Minh City. Hosted with <i class="fab fa-google"></i>.
+        Made in <i class="fas fa-heart text-danger"></i> Ho Chi Minh City. Hosted with <i class="fab fa-github"></i>.
     </p>
 </footer>
 <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
@@ -120,7 +120,7 @@
 <script src="assets/js/tilt.jquery.min.js"></script>
 <script src="assets/js/common.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129271342-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MS44MD8ENV"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -129,7 +129,7 @@
     }
 
     gtag('js', new Date());
-    gtag('config', 'UA-129271342-1');
+    gtag('config', 'G-MS44MD8ENV');
 </script>
 
 </body>
