--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         Founder by <a target="_blank" class="text-primary" href="https://fb.me/hoangsvit">David Nguyen</a>
     </p>
     <p>
-        Made in <i class="fas fa-heart text-danger"></i> Ho Chi Minh City. Hosted with <i class="fab fa-github"></i>.
+        Made in <i class="fas fa-heart text-danger"></i> Ho Chi Minh City.
     </p>
 </footer>
 <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
