--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="col-4 text-center">
                 <a class="blog-header-logo text-dark" href="javascript:;">
-                    <img src="img/brand/logo.svg" alt="Logo" class="logo">
+                    <img src="https://s1.eplus.dev/img/brand/logo.svg" alt="Logo" class="logo">
                 </a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
@@ -58,10 +58,10 @@
 
         <div class="form-group row d-flex justify-content-end align-items-center">
             <div class="col-2 d-flex justify-content-center">
-                <img src="img/brand/logo.svg" class="preview-img bg-light">
+                <img src="https://s1.eplus.dev/img/brand/logo.svg" class="preview-img bg-light">
             </div>
             <div class="input-group col-10">
-                <input type="text" class="form-control" value="https://cdn.eplus.dev/img/brand/logo.svg" id="line_1">
+                <input type="text" class="form-control" value="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo.svg" id="line_1">
                 <div class="input-group-prepend">
                     <button class="input-group-text copy" data-clipboard-target="#line_1">
                         <i class="far fa-copy"></i>
@@ -72,10 +72,10 @@
 
         <div class="form-group row d-flex justify-content-end align-items-center">
             <div class="col-2 d-flex justify-content-center">
-                <img src="img/brand/logo-white.svg" class="preview-img bg-light">
+                <img src="https://s1.eplus.dev/img/brand/logo-white.svg" class="preview-img bg-light">
             </div>
             <div class="input-group col-10">
-                <input type="text" class="form-control" value="https://cdn.eplus.dev/img/brand/logo-white.svg" id="line_2">
+                <input type="text" class="form-control" value="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo-white.svg" id="line_2">
                 <div class="input-group-prepend">
                     <button class="input-group-text copy" data-clipboard-target="#line_2">
                         <i class="far fa-copy"></i>
@@ -86,10 +86,10 @@
 
         <div class="form-group row d-flex justify-content-end align-items-center">
             <div class="col-2 d-flex justify-content-center">
-                <img src="img/brand/logo-black.svg" class="preview-img bg-light">
+                <img src="https://s1.eplus.dev/img/brand/logo-black.svg" class="preview-img bg-light">
             </div>
             <div class="input-group col-10">
-                <input type="text" class="form-control" value="https://cdn.eplus.dev/img/brand/logo-black.svg" id="line_3">
+                <input type="text" class="form-control" value="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo-black.svg" id="line_3">
                 <div class="input-group-prepend">
                     <button class="input-group-text copy" data-clipboard-target="#line_3">
                         <i class="far fa-copy"></i>
@@ -103,7 +103,7 @@
 <footer class="bg-dark py-3 text-center">
     <p>
         <a target="_blank" href="https://eplus.dev" class="btn btn-outline-light copyright-button">
-            Copyright <span id="year"></span> <i class="far fa-copyright"></i> <img src="img/brand/logo-white.svg" class="copyright-logo">Plus.DEV
+            Copyright <span id="year"></span> <i class="far fa-copyright"></i> <img src="https://s1.eplus.dev/img/brand/logo-white.svg" class="copyright-logo">Plus.DEV
         </a>
     </p>
     <p>
