--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <meta property="og:url" content="https://cdn.eplus.dev"/>
     <meta property="og:image:alt" content="CDN.EPLUS.DEV"/>
     <meta property="og:site_name" content="CDN.EPLUS.DEV"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="img/brand/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/brand/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/brand/favicon/favicon-16x16.png">
-    <link rel="manifest" href="img/brand/favicon/site.webmanifest">
-    <link rel="mask-icon" href="img/brand/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="http://s1.eplus.dev/img/brand/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="http://s1.eplus.dev/img/brand/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="http://s1.eplus.dev/img/brand/favicon/favicon-16x16.png">
+    <link rel="manifest" href="http://s1.eplus.dev/img/brand/favicon/site.webmanifest">
+    <link rel="mask-icon" href="http://s1.eplus.dev/img/brand/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="theme-color" content="#ffffff">
     <meta property="article:author" content="https://www.facebook.com/hoangsvit"/>
     <meta property="article:publisher" content="https://www.facebook.com/hoangsvit"/>
     <meta property="fb:app_id" content="363745774395676" />
-    <meta property="og:image" content="https://cdn.eplus.dev/img/brand/logo-share.png" />
+    <meta property="og:image" content="https://s1.eplus.dev/img/brand/logo-share.png" />
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="200" />
     <!--Stylesheet-->
-    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/fontawesome/css/all.css" rel="stylesheet">
+    <link href="http://s1.eplus.dev/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://s1.eplus.dev/assets/css/style.css" rel="stylesheet">
+    <link href="http://s1.eplus.dev/assets/fontawesome/css/all.css" rel="stylesheet">
 </head>
 <body>
 
@@ -113,12 +113,12 @@
         Made in <i class="fas fa-heart text-danger"></i> Ho Chi Minh City.
     </p>
 </footer>
-<script src="assets/js/jquery-3.3.1.slim.min.js"></script>
-<script src="assets/js/popper.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="assets/clipboard/clipboard.min.js"></script>
-<script src="assets/js/tilt.jquery.min.js"></script>
-<script src="assets/js/common.js"></script>
+<script src="http://s1.eplus.dev/assets/js/jquery-3.3.1.slim.min.js"></script>
+<script src="http://s1.eplus.dev/assets/js/popper.min.js"></script>
+<script src="http://s1.eplus.dev/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="http://s1.eplus.dev/assets/clipboard/clipboard.min.js"></script>
+<script src="http://s1.eplus.dev/assets/js/tilt.jquery.min.js"></script>
+<script src="http://s1.eplus.dev/assets/js/common.js"></script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MS44MD8ENV"></script>
 <script>
