--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <meta property="og:url" content="https://cdn.eplus.dev"/>
     <meta property="og:image:alt" content="CDN.EPLUS.DEV"/>
     <meta property="og:site_name" content="CDN.EPLUS.DEV"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="https://s1.eplus.dev/img/brand/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://s1.eplus.dev/img/brand/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://s1.eplus.dev/img/brand/favicon/favicon-16x16.png">
-    <link rel="manifest" href="https://s1.eplus.dev/img/brand/favicon/site.webmanifest">
-    <link rel="mask-icon" href="https://s1.eplus.dev/img/brand/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/favicon/favicon-16x16.png">
+    <link rel="manifest" href="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/favicon/site.webmanifest">
+    <link rel="mask-icon" href="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="theme-color" content="#ffffff">
     <meta property="article:author" content="https://www.facebook.com/hoangsvit"/>
     <meta property="article:publisher" content="https://www.facebook.com/hoangsvit"/>
     <meta property="fb:app_id" content="363745774395676" />
-    <meta property="og:image" content="https://s1.eplus.dev/img/brand/logo-share.png" />
+    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo-share.png" />
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="200" />
     <!--Stylesheet-->
-    <link href="https://s1.eplus.dev/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://s1.eplus.dev/assets/css/style.css" rel="stylesheet">
-    <link href="https://s1.eplus.dev/assets/fontawesome/css/all.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/assets/css/style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/assets/fontawesome/css/all.css" rel="stylesheet">
 </head>
 <body>
 
@@ -40,7 +40,7 @@
             </div>
             <div class="col-4 text-center">
                 <a class="blog-header-logo text-dark" href="javascript:;">
-                    <img src="https://s1.eplus.dev/img/brand/logo.svg" alt="Logo" class="logo">
+                    <img src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo.svg" alt="Logo" class="logo">
                 </a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
@@ -58,7 +58,7 @@
 
         <div class="form-group row d-flex justify-content-end align-items-center">
             <div class="col-2 d-flex justify-content-center">
-                <img src="https://s1.eplus.dev/img/brand/logo.svg" class="preview-img bg-light">
+                <img src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo.svg" class="preview-img bg-light">
             </div>
             <div class="input-group col-10">
                 <input type="text" class="form-control" value="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo.svg" id="line_1">
@@ -72,7 +72,7 @@
 
         <div class="form-group row d-flex justify-content-end align-items-center">
             <div class="col-2 d-flex justify-content-center">
-                <img src="https://s1.eplus.dev/img/brand/logo-white.svg" class="preview-img bg-light">
+                <img src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo-white.svg" class="preview-img bg-light">
             </div>
             <div class="input-group col-10">
                 <input type="text" class="form-control" value="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo-white.svg" id="line_2">
@@ -86,7 +86,7 @@
 
         <div class="form-group row d-flex justify-content-end align-items-center">
             <div class="col-2 d-flex justify-content-center">
-                <img src="https://s1.eplus.dev/img/brand/logo-black.svg" class="preview-img bg-light">
+                <img src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo-black.svg" class="preview-img bg-light">
             </div>
             <div class="input-group col-10">
                 <input type="text" class="form-control" value="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo-black.svg" id="line_3">
@@ -103,7 +103,7 @@
 <footer class="bg-dark py-3 text-center">
     <p>
         <a target="_blank" href="https://eplus.dev" class="btn btn-outline-light copyright-button">
-            Copyright <span id="year"></span> <i class="far fa-copyright"></i> <img src="https://s1.eplus.dev/img/brand/logo-white.svg" class="copyright-logo">Plus.DEV
+            Copyright <span id="year"></span> <i class="far fa-copyright"></i> <img src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/img/brand/logo-white.svg" class="copyright-logo">Plus.DEV
         </a>
     </p>
     <p>
@@ -113,12 +113,12 @@
         Made in <i class="fas fa-heart text-danger"></i> Ho Chi Minh City.
     </p>
 </footer>
-<script src="https://s1.eplus.dev/assets/js/jquery-3.3.1.slim.min.js"></script>
-<script src="https://s1.eplus.dev/assets/js/popper.min.js"></script>
-<script src="https://s1.eplus.dev/assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="https://s1.eplus.dev/assets/clipboard/clipboard.min.js"></script>
-<script src="https://s1.eplus.dev/assets/js/tilt.jquery.min.js"></script>
-<script src="https://s1.eplus.dev/assets/js/common.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/assets/js/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/assets/js/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/assets/clipboard/clipboard.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/assets/js/tilt.jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/ePlus-DEV/cdn.eplus.dev/assets/js/common.js"></script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MS44MD8ENV"></script>
 <script>
